@@ -135,7 +135,7 @@ namespace CastleTests.Lifestyle
 			TestHandlersLifestyle(typeof(TrivialComponent), LifestyleType.Singleton, false);
 			TestHandlersLifestyle(typeof(TrivialComponent), LifestyleType.Thread, false);
 			TestHandlersLifestyle(typeof(TrivialComponent), LifestyleType.Transient, false);
-#if (!SILVERLIGHT)
+#if !(SILVERLIGHT || CLIENTPROFILE)
 			TestHandlersLifestyle(typeof(TrivialComponent), LifestyleType.PerWebRequest, false);
 #endif
 
@@ -143,7 +143,7 @@ namespace CastleTests.Lifestyle
 			TestHandlersLifestyleWithService(typeof(TrivialComponent), LifestyleType.Singleton, false);
 			TestHandlersLifestyleWithService(typeof(TrivialComponent), LifestyleType.Thread, false);
 			TestHandlersLifestyleWithService(typeof(TrivialComponent), LifestyleType.Transient, false);
-#if (!SILVERLIGHT)
+#if !(SILVERLIGHT || CLIENTPROFILE)
 			TestHandlersLifestyleWithService(typeof(TrivialComponent), LifestyleType.PerWebRequest, false);
 #endif
 
@@ -170,7 +170,7 @@ namespace CastleTests.Lifestyle
 			Kernel.Register(Component.For(typeof(CustomComponent)).Named("c"));
 			handler = Kernel.GetHandler("c");
 			Assert.AreEqual(LifestyleType.Custom, handler.ComponentModel.LifestyleType);
-#if (!SILVERLIGHT)
+#if !(SILVERLIGHT || CLIENTPROFILE)
 			Kernel.Register(Component.For(typeof(PerWebRequestComponent)).Named("d"));
 			handler = Kernel.GetHandler("d");
 			Assert.AreEqual(LifestyleType.PerWebRequest, handler.ComponentModel.LifestyleType);
@@ -200,7 +200,7 @@ namespace CastleTests.Lifestyle
 			Kernel.Register(Component.For(typeof(TrivialComponent)).Named("c"));
 			handler = Kernel.GetHandler("c");
 			Assert.AreEqual(LifestyleType.Thread, handler.ComponentModel.LifestyleType);
-#if (!SILVERLIGHT)
+#if !(SILVERLIGHT || CLIENTPROFILE)
 			confignode = new MutableConfiguration("component");
 			confignode.Attributes.Add("lifestyle", "perWebRequest");
 			Kernel.ConfigurationStore.AddComponentConfiguration("d", confignode);
